# yamenu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  border_f.glsl  compile.bat  compile.sh  config.ini  fragment.glsl  glyph_f.glsl  glyph_v.glsl  main.c  textured_f.glsl  vertex.glsl
include/: config.h  shaders.h  yamenu.h
src/: yamenu.c
